small fix to the alignment of the span.form-field-description

--- a/wdn/templates_3.0/css/content/forms.css
+++ b/wdn/templates_3.0/css/content/forms.css
@@ -268,6 +268,8 @@ p.attention {
 #maincontent form.cool fieldset span.form-field-description {
 	color:#1091D1;
 	font-size:75%;
+	display:inline-block;
+	margin:10px 0 0 5px;
 }
 
 /*For the form hints
